rm node module